--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "plotly.js": "^1.55.2",
     "react": "^16.13.1",
     "react-animejs": "^0.5.4",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
+    "react-input-number": "^5.0.19",
+    "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-vis": "^1.11.7"
   },
   "scripts": {
     "start": "react-scripts start",
